--- a/iteracion/KAAB/masita/pom.xml
+++ b/iteracion/KAAB/masita/pom.xml
@@ -15,6 +15,11 @@
             <type>maven-plugin</type>
         </dependency>
         <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
